# hyprland.c

./: .gitignore  CMakeLists.txt  README.md  flake.nix  hyprland.c
.github/workflows/: cmake.yml
